dev: order price query